--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
     height: 100px;
-    background-color: rgb(32, 221, 225);
+    /* background-color: rgb(32, 221, 225); */
   }
   
   .social {
